--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,21 @@
 {
-  "name": ".",
+  "name": "trash-monitoring-backend",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Clint",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.1",
+    "nodemon": "^3.0.1"
+  }
 }
